# SoundWave

./: .gitignore  AGENTS.md  CHANGELOG.md  COLLAB_SUMMARY.md  DEPENDENCIES  DESIGN.md  LICENSE  NOTICE  PRD.md  README.md  TECH_DESIGN_0.0.2.md
.github/workflows/: ci.yaml
docs/: fft_cross_platform_report.md  fft_reference_double.json  fft_reference_single.json  fft_reference_sweep.json  fft_reference_white.json
docs/design/0.0.2/: TECH_DESIGN_0.0.2.md
docs/plan/0.0.2/: TECH_PLAN_0.0.2.md
docs/plans/: story08-flutter-adapter.md
docs/release/: LOCAL_PUBLISH.md
docs/stories/: story-template.md
docs/stories/0.0.1/: story-05-dart-state-controller.md  story-07-waveform-view.md  story-11-foreground-background.md  story-12-performance-profiling.md  story-13-ci-coverage.md  story-16-ios-pcm-fft.md
docs/stories/0.0.2/: story-01-ffmpeg-removal.md  story-01-remove-ffmpeg.md  story-02-fft-cross-platform.md  story-02-pcm-ingress-and-api.md  story-03-data-export.md  story-03-kissfft-integration.md  story-04-plugin-bridge-update.md  story-04-visualization-backdoor.md  story-05-demo-pcm-assets.md  story-05-license-apache.md  story-06-native-core-integration.md  story-06-packaging-publish.md  story-06-release-packaging.md  story-07-license-notice.md  story-07-native-packaging.md  story-07-regression-baseline.md  story-08-native-demo.md  story-08-native-packaging.md  story-08-regression-tests.md  story-09-export-module.md  story-09-native-demo.md  story-09-release-packaging.md
docs/tests/: perf_baseline_template.md
integration/: README.md
integration/android-host/: build.gradle  settings.gradle
integration/android-host/app/: build.gradle
integration/ios-host/: README.md  project.yml
integration/ios-host/Sources/: AppMain.swift  ContentView.swift  SpectrumHost.swift
integration/ios-host/host/host/: ContentView.swift  SpectrumHost.swift  SpectrumView.swift  WaveformView.swift  hostApp.swift
native/android-visualization/: README.md  build.gradle  consumer-rules.pro
native/android-visualization/src/main/: AndroidManifest.xml
native/android-visualization/src/main/cpp/: CMakeLists.txt  visualization_jni.cpp
native/core/: CMakeLists.txt  README.md
native/core/include/: audio_engine.h  decoder.h  fft_spectrum.h  pcm_event_bus.h  pcm_throttler.h  playback_thread.h  ring_buffer.h  visualization_core_stub.h
native/core/scripts/: run_perf_smoke.sh
native/core/src/: audio_engine_stub.cpp  decoder_ffmpeg.cpp  decoder_stub.cpp  fft_spectrum.cpp  pcm_event_bus.cpp  pcm_throttler.cpp  ring_buffer.cpp  visualization_core_stub.cpp
native/core/tests/: audio_engine_test.cpp  fft_compare_main.cpp  fft_spectrum_test.cpp  pcm_event_bus_test.cpp  pcm_throttle_test.cpp  ring_buffer_test.cpp
native/ios-visualization/: README.md
native/ios-visualization/scripts/: build_vdsp_xcframework.sh
scripts/: check_notice.sh  ci_checks.sh  publish_android_local.sh  publish_ios_xcframework.sh  regress_pcm_fft.sh
soundwave_player/: DEPENDENCIES  LICENSE  NOTICE  README.md  pubspec.yaml
soundwave_player/android/: build.gradle  settings.gradle
soundwave_player/android/adapter/: build.gradle  consumer-rules.pro
soundwave_player/android/core/: build.gradle  consumer-rules.pro
soundwave_player/android/core/src/main/cpp/: CMakeLists.txt  fft_bridge.cpp
soundwave_player/android/src/main/: AndroidManifest.xml
soundwave_player/android/src/main/cpp/: CMakeLists.txt  fft_jni.cpp
soundwave_player/docs/: demo_acceptance.md
soundwave_player/example/: README.md  pubspec.yaml
soundwave_player/example/android/app/: build.gradle
soundwave_player/example/integration_test/: demo_smoke_test.dart  platform_decode_smoke_test.dart  plugin_integration_test.dart
soundwave_player/example/ios/: Podfile
soundwave_player/example/ios/Runner/: Info.plist
soundwave_player/example/ios/Runner.xcodeproj/: project.pbxproj
soundwave_player/example/lib/: main.dart
soundwave_player/example/test/: assets_pack_test.dart  widget_test.dart
soundwave_player/ios/: soundwave_player.podspec
soundwave_player/ios/Classes/: SoundwavePlayerPlugin.swift
soundwave_player/ios/core/: Podfile  soundwave_core.podspec
soundwave_player/lib/: soundwave_player.dart
soundwave_player/lib/src/: audio_controller.dart  audio_status_view.dart  pcm_buffer.dart  soundwave_config.dart  soundwave_exception.dart  soundwave_player.dart  spectrum_buffer.dart  spectrum_frame.dart  spectrum_queue.dart  spectrum_stream_view.dart  spectrum_view.dart  waveform_cache.dart  waveform_stream_view.dart  waveform_style.dart  waveform_view.dart
soundwave_player/scripts/: ci_coverage.sh  ci_fail_format.sh  ci_local.sh  profile_local_playback.sh
soundwave_player/test/: audio_controller_streaming_test.dart  audio_controller_test.dart  audio_foreground_background_test.dart  audio_status_view_test.dart  audio_visual_golden_test.dart  channel_contract_test.dart  data_exporter_test.dart  event_channel_stress_test.dart  fft_contract_android_test.dart  fft_contract_ios_test.dart  pcm_buffer_test.dart  spectrum_buffer_test.dart  spectrum_view_test.dart  streaming_perf_smoke_test.dart  waveform_stream_view_test.dart  waveform_style_test.dart  waveform_view_test.dart
soundwave_player/test/helpers/: fake_soundwave_player.dart
stories/: story-01-plugin.md  story-02-core-bootstrap.md  story-03-decode-chain.md  story-04-ringbuffer-playback.md  story-05-dart-state-controller.md  story-06-pcm-throttle.md  story-07-waveform-view.md  story-08-fft-spectrum.md  story-09-local-playback-e2e.md  story-10-streaming.md  story-11-foreground-background.md  story-12-performance-profiling.md  story-13-ci-coverage.md  story-14-doc-demo.md  story-15-android-pcm-fft.md  story-16-ios-pcm-fft.md
stories/0.0.1/: story-01-plugin.md  story-02-core-bootstrap.md  story-03-decode-chain.md  story-09-local-playback-e2e.md  story-10-streaming.md  story-14-doc-demo.md  story-15-android-pcm-fft.md
tools/: check_license.sh  fft_reference.py  fft_vdsp_compare.swift
tools/release/: build_native_packages.sh  build_release.sh
(+34 files in other folders)
